# zero-to-gpt-agentic-architecture

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: copyright-guard.yml  lint.yml  test.yml
agent-docs/: README.md
agent-docs/ch02/: 01-word-embeddings.md
agent-prompts/ch02/: 01-word-embeddings.md
scripts/: ep02-word-embeddings-script.md
src/llm_from_scratch/: __init__.py
