[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Zero to GPT: The Agentic Architecture — Building a GPT from scratch using Agentic Engineering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Leo Liu", email = "siyangleoliu@gmail.com"},
]

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0",
]
nlp = [
    "tiktoken>=0.7.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "jupyter>=1.0",
    "matplotlib>=3.7",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
